# HGR

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
hgr/: Tracker.py  camera.py  custom_gestures.py  custom_gestures_train.py  landmarks.py  layout.py  main.py  movements.py  tracker.py  train.py  ui.py
hgr/mp/: api.py  gesture.py  tracker.py  train.py
hgr/ui/: actions.py  layout.py  util.py
hgr/util/: controls.py  util.py
logs/: actions.json
notebooks/: HGR_custom_image.ipynb  HGR_custom_webcam.ipynb  HGR_training.ipynb  google_hand_recognition_guide.ipynb  image.ipynb  image_recognition_with_custom_gestures.ipynb  train.ipynb  training_custom_gesture.ipynb  webcam.ipynb
src/: Gesture.py  Tracker.py
tests/: app.py
