[tool.poetry]
name = "hgr"
version = "0.1.0"
description = ""
authors = ["surajkareppagol <surajkareppagol.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
rich = "^13.7.1"
ttkbootstrap = "^1.10.1"
mediapipe = "^0.10.11"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
